<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".merchant.views.catalog.AddCatalogItemFragment">

    <TextView
            android:text="@string/catalog_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/catalogItemNameLabel"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/catalogItemName"
            app:layout_constraintBaseline_toBaselineOf="@+id/catalogItemName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/catalogItemName"
            app:layout_constraintStart_toEndOf="@+id/catalogItemNameLabel" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:autofillHints=""/>
    <TextView
            android:text="@string/catalog_item_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/itemValueLabel" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/catalogItemValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/catalogItemValue"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/catalogItemValue" app:layout_constraintStart_toEndOf="@+id/itemValueLabel"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/catalogItemName"/>
    <Button
            android:text="@string/save_catalog_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/saveCatalogItemButton"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteCatalogItemButton"
            app:layout_constraintEnd_toStartOf="@+id/saveCatalogItemButton" android:layout_marginEnd="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveCatalogItemButton" tools:text="Delete"
            android:text="@string/delete"/>
</androidx.constraintlayout.widget.ConstraintLayout>