<resources>
    <string name="app_name">LifeTown POS</string>
    <string name="add_item_button">Add Item</string>
    <string name="calculate_change">Accept</string>
    <string name="current_sale">Current Sale</string>
    <string name="pay_with_cash_button">Pay Cash</string>
    <string name="sale_complete_label">Sale Complete</string>
    <string name="new_sale_button">New Sale</string>
    <string name="enter_amount_given">Enter Amount Given</string>
    <string name="add_purchased_items">Add Purchased Items</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit">Edit Catalog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addCatalogItem">Add</string>
    <string name="catalog_item_name">Item Name:</string>
    <string name="catalog_item_value">Item Value:</string>
    <string name="save_catalog_item">Save</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="please_swipe_card">Please Swipe Card</string>
    <string name="CardDeclinedMessage">Your card was declined!</string>
    <string name="CardErrorMessage">There was an error communicating with the bank</string>
    <string name="x">X</string>
    <string name="pay_credit">PAY CREDIT</string>
    <string name="open_drawer">NO SALE</string>
    <string name="quick_pay">QUICK CASH</string>
    <string name="yes">Yes</string>
    <string name="receipt_prompt">Would you like to print a receipt?</string>
    <string name="no">No</string>
</resources>
