<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".merchant.views.PayCashFragment">

    <fragment
            android:layout_height="match_parent"
            android:name="org.lifetowncolumbus.pos.merchant.views.ItemizedSaleFragment"
            android:id="@+id/ItemizedSaleFragment" android:layout_weight="1"
            android:layout_width="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="2">
        <Button
                android:text="@string/calculate_change"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:id="@+id/acceptCashButton"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/amountTendered"
                app:layout_constraintStart_toEndOf="@+id/cancelPaymentButton"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amountTendered"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/payCashLabel"
                app:layout_constraintHorizontal_bias="0.50"/>
        <TextView
                android:text="@string/enter_amount_given"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payCashLabel" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
        <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelPaymentButton"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/acceptCashButton"
                app:layout_constraintBaseline_toBaselineOf="@+id/acceptCashButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>