...
            android:layout_weight="2"
                                                       android:layout_width="0dp"
                                                       android:layout_height="match_parent" >
        <TextView
                android:text="@string/please_swipe_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swipeCardMessage"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"/>
        <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cancelSwipeButton"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/swipeCardMessage" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
...
