...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/printReceiptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dontPrintReceiptButton"
                app:layout_constraintTop_toBottomOf="@+id/printReceiptLabel" />

        <Button
                android:id="@+id/dontPrintReceiptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
